--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "admin-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://itzraghu1.github.io/admin-app",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
